Count real parser entries across configured LSP edits